Changes for spack-stack (on Rocky 8).

--- a/scripts/compsets/config/ipe.config
+++ b/scripts/compsets/config/ipe.config
@@ -4,7 +4,7 @@
 export VALID_IPE_PET=($(seq 1 40))
 
 # filename config, default format is $*NAME.YYYYMMDDHHmm these days, but we pray for NetCDF output
-export PLASMANAME=${PLASMANAME:-IPE_State.apex}
+export PLASMANAME=${PLASMANAME:-"IPE_State.apex"}
 export IPEBASESEARCH=IPE_State.apex.
 
 ## model options
@@ -19,3 +19,6 @@ export IPEGRIDFILENAME=${IPEGRIDFILENAME:-"IPE_Grid.h5"}
 export IPEGRID=${IPEGRID:-${IPE_IC_DIR}/$IPEGRIDFILENAME}  # filename might vary over time and by machine
 export GRIDDIR=${GRIDDIR:-$IPE_IC_DIR} # where IPE grid is defined
 export HWMPATH=${HWMPATH:-$IPE_IC_DIR} # binary coefficient files for horizontal wind model
+
+export IPE_FILE_PREFIX=${IPE_FILE_PREFIX:-${IPEBASESEARCH}}
+export IPE_FILE_EXTENSION=${IPE_FILE_EXTENSION:-".h5"
