--- a/scripts/compsets/config/ipe.config
+++ b/scripts/compsets/config/ipe.config
@@ -21,4 +21,4 @@ export GRIDDIR=${GRIDDIR:-$IPE_IC_DIR} # where IPE grid is defined
 export HWMPATH=${HWMPATH:-$IPE_IC_DIR} # binary coefficient files for horizontal wind model
 
 export IPE_FILE_PREFIX=${IPE_FILE_PREFIX:-${IPEBASESEARCH}}
-export IPE_FILE_EXTENSION=${IPE_FILE_EXTENSION:-".h5"
+export IPE_FILE_EXTENSION=${IPE_FILE_EXTENSION:-".h5"}
