--- a/scripts/compsets/wcoss2_20130316.config
+++ b/scripts/compsets/wcoss2_20130316.config
@@ -3,6 +3,7 @@
 export MODE="WAM-IPE"
 export SWIO=".true."
 #export DOIAU="YES"
+export OMP_NUM_THREADS=1
 
 ## user/job configuration (must be set here)
 export ACCOUNT=WFS-DEV     # computational account
